# rust-driver-ffi-spike

./: .gitignore  Cargo.toml  README.md  devenv.nix
cosmos_driver/: Cargo.toml  build.rs
cosmos_driver/src/: error.rs  ffi.rs  lib.rs  pipeline.rs
go_consumer/: ffi_test.go  go.mod  main.go
go_consumer/pipeline/: pipeline.go
rust_consumer/: Cargo.toml
rust_consumer/src/: main.rs
script/: build  run
